css fix for dropdowns on narrow screens

--- a/bloodstar.xyz/src/styles/desktop.css
+++ b/bloodstar.xyz/src/styles/desktop.css
@@ -77,6 +77,9 @@
     .dropdown{
         padding:0 3px;
     }
+    .dropdownContent {
+        top:18px;
+    }
 }
 
 /* tabs */
